# mcpguard

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  design.md  prompts.md  pyproject.toml  requirements.md  roadmap.md
.claude/: settings.json
.claude/commands/: check-spec-deps.md  create-spec.md  implement-spec.md  phase-review.md  start-spec-dev.md  verify-spec.md
.claude/skills/grill-me/: SKILL.md
docs/: architecture.drawio  learning-based-development-guide.md  learning-spec-playbook.md
docs/learning-qa/: S1.2-grillme.md  S1.2-socratic.md
docs/reviews/: phase-1-review.md
specs/spec-S1.1-dependency-declaration/: checklist.md  learning-log.md  spec.md
specs/spec-S1.2-developer-commands/: checklist.md  learning-log.md  spec.md
specs/spec-S1.3-config/: checklist.md  grillme-log.md  spec.md
specs/spec-S1.4-package-init/: checklist.md  grillme-log.md  spec.md
specs/spec-S1.5-logging-setup/: checklist.md  learning-log.md  spec.md
src/mcpguard/: __main__.py  cli.py
src/mcpguard/models/: config.py
src/mcpguard/utils/: logging.py
tests/: test_s1_1_dependency_declaration.py  test_s1_2_developer_commands.py  test_s1_3_config.py  test_s1_4_package_init.py  test_s1_5_logging.py  test_smoke.py
